[build-system]
# NOTE: `pip install build` to build with `python -m build`
requires = [
  "setuptools >= 40.9.0",
  "wheel"
]
build-backend = "setuptools.build_meta"


[tool.towncrier]
directory = "changes.d"
name = "Cylc UI Server"
package = "cylc.uiserver"
filename = "CHANGES.md"
template = "changes.d/changelog-template.jinja"
underlines = ["", "", ""]
title_format = "## cylc-uiserver-{version} (Released {project_date})"
issue_format = "[#{issue}](https://github.com/cylc/cylc-uiserver/pull/{issue})"

# These changelog sections will be shown in the defined order:
[[tool.towncrier.type]]
directory = "break" # NB this is just the filename not directory e.g. 123.break.md
name = "⚠ Breaking Changes"
showcontent = true
[[tool.towncrier.type]]
directory = "feat"
name = "🚀 Enhancements"
showcontent = true
[[tool.towncrier.type]]
directory = "fix"
name = "🔧 Fixes"
showcontent = true
[[tool.towncrier.type]]
directory = "ui-version"
name = "UI version"
showcontent = true


[tool.pytest.ini_options]
addopts = """
    --doctest-modules
    --doctest-continue-on-failure
    -p no:asyncio
"""
# Note: disabled pytest-asyncio to avoid conflict with pytest-tornasync
# The latter should be capable of running the async tests anyway
doctest_optionflags = """
    NORMALIZE_WHITESPACE
    IGNORE_EXCEPTION_DETAIL
    ELLIPSIS
"""
testpaths = [
    'cylc/uiserver'
]
markers = [
    'integration: tests which run servers and try to connect to them'
]
