# Copyright (C) NIWA & British Crown (Met Office) & Contributors.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = cylc-uiserver
version = attr: cylc.uiserver.__version__
url = https://github.com/cylc/cylc-uiserver/
description = Cylc UI Server
long_description_content_type=text/markdown
long_description = file: README.md
license = GPL
license_files = COPYING,
platforms = any
classifiers =
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find_namespace:
python_requires = >=3.9
include_package_data = True
install_requires =
    # NB: We have cylc-flow at the top to force it to install its transitive
    # dependencies first. This way, if other dependencies (e.g. jupyterhub)
    # don't pin versions, we will get whatever cylc-flow needs, and not the
    # bleeding-edge version.
    cylc-flow==8.5.*
    ansimarkup>=1.0.0
    importlib-resources>=1.3.0; python_version < "3.9"
    jupyter_server>=2.13.0
    requests
    packaging
    psutil
    tornado>=6.5.0
    traitlets>=5.2.1  # required for logging_config (5.2.0 had bugs)

    # Transitive dependencies that we directly (lightly) use:
    pyzmq
    graphene

[options.packages.find]
include = cylc*

[options.entry_points]
# jupyter commands
console_scripts =
    jupyter-cylc = cylc.uiserver.scripts.gui:main
    jupyter-cylchubapp = cylc.uiserver.scripts.hubapp:main [hub]
# cylc commands
cylc.command =
    gui = cylc.uiserver.scripts.gui:main
    hub = cylc.uiserver.scripts.hub:main [hub]
    hubapp = cylc.uiserver.scripts.hubapp:main [hub]

[options.extras_require]
hub =
    jupyterhub>=4
tests =
    coverage>=5.0.0
    flake8-broken-line>=0.3.0
    flake8-bugbear>=21.0.0
    flake8-builtins>=1.5.0
    flake8-comprehensions>=3.5.0
    flake8-debugger>=4.0.0
    flake8-mutable>=1.2.0
    flake8-simplify>=0.14.0
    flake8-type-checking
    flake8>=3.0.0
    jupyter_server[test]
    mypy>=0.900
    pytest-cov>=2.8.0
    pytest-tornasync>=0.5.0
    # https://github.com/pytest-dev/pytest/issues/12263
    pytest>=6,<8.2
    towncrier>=24.7.0
    types-setuptools
    types-requests>2
all =
    %(hub)s
    %(tests)s
